--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-bootstrap-date-picker": "^4.0.12",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
